# hyperlinked

./: .envrc  .gitignore  Cargo.toml  flake.nix  psht.toml  releasor2000.toml  tailwind.config.js
docs/: rust-slimming-plan.md
hyperlinked/: Info.plist  apollo-codegen-config.json
hyperlinked/Add/: Add.entitlements  Info.plist  ShareAPIClient.swift  ShareOutboxStore.swift  SharePayloadExtractor.swift  ShareServerAuth.swift  ShareViewController.swift
hyperlinked/Shared/: AppGroupConfig.swift  DB.swift  HTTPRequestBuilder.swift  ServerAuth.swift  ShareOutbox.swift  WidgetHyperlinkStore.swift
hyperlinked/Widget/: AppIntent.swift  Info.plist  Widget.swift  WidgetBundle.swift  WidgetDiagnosticsBridge.swift  WidgetLocalStore.swift  WidgetPreviewData.swift  WidgetView.swift  WidgetVisuals.swift
hyperlinked/hyperlinked/: ContentView.swift  hyperlinked.entitlements  hyperlinkedApp.swift
hyperlinked/hyperlinked.xcodeproj/: project.pbxproj
hyperlinked/hyperlinkedTests/: hyperlinkedTests.swift
hyperlinked/hyperlinkedUITests/: hyperlinkedUITests.swift  hyperlinkedUITestsLaunchTests.swift
hyperlinked_macros/: Cargo.toml
hyperlinked_macros/src/: lib.rs
migration/: Cargo.toml
migration/src/: lib.rs  m20220101_000001_create_table.rs  m20260218_000002_add_hyperlink_url_unique.rs  m20260219_000003_add_hyperlink_clicks_count.rs  m20260219_000004_add_hyperlink_last_clicked_at.rs  m20260219_000005_add_hyperlink_processing_state.rs  m20260219_000006_create_hyperlink_processing_error.rs  m20260219_000007_add_processing_jobs_and_snapshots.rs  m20260219_000008_add_job_kinds_and_artifacts.rs  m20260220_000009_add_hyperlink_discovery_relations.rs  m20260221_000010_add_hyperlink_raw_url_and_canonicalize.rs  m20260222_000011_add_hyperlink_search_fts.rs  m20260222_000012_add_artifact_file_storage_and_screenshots.rs  m20260222_000013_add_hyperlink_processing_job_active_unique_guard.rs  m20260222_000014_add_hyperlink_og_fields.rs  m20260224_000015_add_hyperlink_index_pagination_indexes.rs  m20260226_000016_add_hyperlink_tombstones.rs  m20260226_000017_add_hyperlink_artifact_size_index.rs  m20260227_000018_create_app_kv_store.rs  m20260306_000019_add_hyperlink_source_type.rs  m20260306_000020_create_tags_and_hyperlink_tags.rs  m20260309_000021_create_topic_and_action_tags.rs  m20260311_000022_add_tag_hierarchy.rs  m20260312_000023_create_llm_interactions.rs  m20260314_000024_remove_tagging.rs  m20260315_063746_create_tags.rs
script/: destroy-model  generate-model
scripts/: apollo-codegen.sh  export-graphql-schema.sh  tailwind-build.sh  tailwind-watch.sh
src/: dev_reload.rs  dev_reload_marker.rs  lib.rs  test_support.rs
src/app/: mod.rs
src/db/: connection.rs  migrate.rs  mod.rs  schema.rs
src/entity/: action_tag.rs  app_kv.rs  artifact_gc_pending.rs  hyperlink.rs  hyperlink_action_tag.rs  hyperlink_artifact.rs  hyperlink_processing_error.rs  hyperlink_processing_job.rs  hyperlink_relation.rs  hyperlink_search_doc.rs  hyperlink_search_fts.rs  hyperlink_search_fts_config.rs  hyperlink_search_fts_data.rs  hyperlink_search_fts_docsize.rs  hyperlink_search_fts_idx.rs  hyperlink_tag.rs  hyperlink_tombstone.rs  hyperlink_topic_tag.rs  job_events.rs  jobs.rs  llm_interaction.rs  mod.rs  prelude.rs  rss_feed.rs  tag.rs  taxonomy_cleanup_cluster.rs  taxonomy_cleanup_run.rs  topic_tag.rs
src/import/: linkwarden.rs  mod.rs  paperless_ngx.rs  rss.rs
src/integrations/: mathpix.rs  mod.rs
src/model/: hyperlink.rs  hyperlink_artifact.rs  hyperlink_processing_error.rs  hyperlink_processing_job.rs  hyperlink_search_doc.rs  hyperlink_tagging.rs  hyperlink_title.rs  kv_store.rs  mod.rs  settings.rs  tagging_settings.rs  url_canonicalize.rs
src/processors/: mod.rs  oembed_fetch.rs  og_fetch.rs  pipeline.rs  processor.rs  readability_fetch.rs  snapshot_fetch.rs  sublink_discovery.rs  tag_classify.rs  title_fetch.rs  worker.rs
src/queue/: mod.rs
src/server/: admin.rs  admin_backup.rs  admin_import.rs  admin_jobs.rs  admin_tag_reclassify.rs  chromium_diagnostics.rs  context.rs  flash.rs  font_diagnostics.rs  graphql.rs  html_layout.rs  http_logging.rs  hyperlink_fetcher.rs  hyperlinks.rs  mdns.rs  mod.rs  system_stats.rs  test_support.rs  views.rs
src/storage/: artifacts.rs  gc.rs  mod.rs
templates/admin/: _tab_artifacts.stpl  _tab_feeds.stpl  _tab_import_export.stpl  index.stpl  (+5 more)
(+157 files in other folders)
