[package]
name = "hyperlinked"
version = "0.1.0"
edition = "2024"

[dependencies]
lilqueue = { path = "../lilqueue" }
async-trait = "0.1.89"
axum = { version = "0.8.8", features = ["macros", "multipart", "ws"] }
clap = { version = "4.5.49", features = ["derive", "env"] }
chrono = "0.4.42"
dom_smoothie = "0.8.0"
html2md = "0.2"
image = { version = "0.25.8", default-features = false, features = ["png"] }
notify = "8.2.0"
pdf-extract = "0.7"
reqwest = { version = "0.12.24", default-features = false, features = [
  "rustls-tls",
] }
sailfish = "0.10.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
serde_urlencoded = "0.7.1"
sha2 = "0.10.9"
seaography = { version = "~1.1.4", features = ["with-chrono", "with-decimal"] }
sea-orm = { version = "1.1.19", features = [
  "sqlx-sqlite",
  "runtime-tokio",
  "debug-print",
  "seaography",
  "with-chrono",
  "with-json",

] }
sqlx = { version = "0.8.6", default-features = false, features = [
  "runtime-tokio-rustls",
  "sqlite",
] }
tokio = { version = "1.49.0", features = ["full"] }
tower-http = { version = "0.6.6", features = ["fs"] }
tracing = { version = "0.1.44" }
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
tracing-tree = "0.4.0"

[dev-dependencies]
axum-test = "18.7.0"

[profile.dev-hot]
inherits = "dev"
debug = 0
