[package]
name = "hyperlinked"
version = "0.2.19"
edition = "2024"

[[bin]]
name = "hyperlinked"

[dependencies]
lilqueue = { git = "https://github.com/nakajima/lilqueue", branch = "main" }
async-trait = "0.1.89"
axum = { version = "0.8.8", features = ["macros", "multipart", "ws"] }
base64 = "0.22.1"
clap = { version = "4.5.49", features = ["derive", "env"] }
chrono = "0.4.42"
async-graphql = { version = "7.0.19", default-features = false, features = ["graphiql"] }
dom_smoothie = "0.8.0"
flate2 = { version = "1.0.35", default-features = false, features = [
  "rust_backend",
] }
futures-util = "0.3.32"
hyperlinked_macros = { path = "hyperlinked_macros" }
html2md = "0.2"
hayro = "0.5.0"
image = { version = "0.25.8", default-features = false, features = [
  "png",
  "webp",
] }
include_dir = "0.7.4"
notify = "8.2.0"
pdf-extract = "0.7"
pulldown-cmark = "0.13.0"
reqwest = { version = "0.12.24", default-features = false, features = [
  "rustls-tls",
  "multipart",
  "json",
] }
sailfish = "0.10.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
serde_urlencoded = "0.7.1"
sha2 = "0.10.9"
seaography = { version = "2.0.0-rc.8", features = ["with-chrono", "with-decimal"] }
sea-orm = { version = "2.0.0-rc.37", features = [
  "sqlx-sqlite",
  "runtime-tokio",
  "debug-print",
  "with-chrono",
  "with-json",

] }
sqlx = { version = "0.8.6", default-features = false, features = [
  "runtime-tokio-rustls",
  "sqlite",
] }
tokio = { version = "1.49.0", features = ["full"] }
chromiumoxide = "0.9.1"
tokio-util = { version = "0.7.16", features = ["io"] }
tracing = { version = "0.1.44" }
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
tracing-tree = "0.4.0"
webp = "0.3.1"
feed-rs = "2.3.1"
zip = { version = "0.6.6", default-features = false, features = ["deflate"] }

[dev-dependencies]
axum-test = "18.7.0"

[profile.release]
opt-level = "s"

[profile.dev-hot]
inherits = "dev"
debug = 0
